tests/invalid/annotation_dict_value_none/main.py
def run_case() -> None:
    bad: dict[int, None] = {}


if __name__ == "__main__":
    run_case()
